test/Macros/macro_codeitems_disabled.code
// RUN: %target-typecheck-verify-language -language-version 5 %s

@freestanding(codeItem)  // expected-error {{codeItem macros are an experimental feature that is not enabled}}
macro codeItems() // expected-error {{macro 'codeItems()' requires a definition}}
